fix(Projects): fix duplicate entry / notifications closes #62

--- a/src/app/modules/projects/project-create/project-create.component.html
+++ b/src/app/modules/projects/project-create/project-create.component.html
@@ -22,7 +22,7 @@
 
       <div class="form-group row">
         <div class="offset-sm-2 col-sm-10">
-          <button type="submit" class="btn btn-primary">Create Project</button>
+          <button [disabled]="loading" type="submit" class="btn btn-primary">Create Project</button>
         </div>
       </div>
 
