--- a/src/app/modules/projects/project-details/project-details.component.html
+++ b/src/app/modules/projects/project-details/project-details.component.html
@@ -7,7 +7,7 @@
     <span class="project-label">{{ 'PROJECT_DETAILSPAGE.CREATED_BY' | translate }}: <span class="project-label-value">Romario Tracia</span></span>
     <span class="project-label">{{ 'PROJECT_DETAILSPAGE.UPDATED_BY' | translate }}: <span class="project-label-value">Valentino Galerro</span></span>
     <span class="project-label edit-button"><button class="btn btn-primary"><i class="fa fa-edit"></i> {{ 'PROJECT_DETAILSPAGE.EDIT' | translate }}</button></span>
-    <span class="project-label delete-button"><button class="btn btn-primary" (click)="deleteProject(project._id);"><i class="fa fa-trash"></i> {{ 'PROJECT_DETAILSPAGE.DELETE' | translate }}</button></span>
+    <span class="project-label delete-button"><button [disabled]="loading" class="btn btn-primary" (click)="deleteProject(project._id);"><i class="fa fa-trash"></i> {{ 'PROJECT_DETAILSPAGE.DELETE' | translate }}</button></span>
     <br><br>
     <b>{{ 'PROJECT_DETAILSPAGE.DESCRIPTION' | translate }}</b>
     <div>Amore non è guardarci l'un l'altro, ma guardare insieme nella stessa direzione. (Antoine de Saint Exupéry)</div>
