--- a/src/app/modules/settings/settings.component.html
+++ b/src/app/modules/settings/settings.component.html
@@ -1,21 +1,21 @@
 <div id="wrapper" [class.dark-theme]="themeService.theme">
-<h1>Settings</h1>
-<br>
-<div>
+  <h1>{{ 'SETTINGS.TITLE' | translate }}</h1>
+  <br>
+  <div>
 
-  <label>{{ 'SETTINGS.CHOOSE_LANGUAGE' | translate }}</label>
-  <select #langSelect (change)="translate.use(langSelect.value)">
+    <label>{{ 'SETTINGS.CHOOSE_LANGUAGE' | translate }}</label>
+    <select #langSelect (change)="translate.use(langSelect.value)">
     <option *ngFor="let lang of translate.getLangs()" [value]="lang" [selected]="lang === translate.currentLang">{{ lang }}</option>
   </select>
-</div>
-<br>
-<div>
-  <label>{{ 'SETTINGS.THEME' | translate }}</label>
-  
-  <select #themeSelect (change)="themeService.changeTheme(themeSelect.value);">
+  </div>
+  <br>
+  <div>
+    <label>{{ 'SETTINGS.THEME' | translate }}</label>
+
+    <select #themeSelect (change)="themeService.changeTheme(themeSelect.value);">
     <option value="BRIGHT" [selected]="themeService.getTheme() == 'BRIGHT'">{{ 'SETTINGS.THEME_BRIGHT' | translate }}</option>
     <option value="DARK" [selected]="themeService.getTheme() == 'DARK'">{{ 'SETTINGS.THEME_DARK' | translate }}</option>
   </select>
-  
-</div>
+
+  </div>
 </div>
