fix(Sidebar): fix active highlight for project details Closes #72

--- a/src/app/modules/layout/sidebar/sidebar.component.html
+++ b/src/app/modules/layout/sidebar/sidebar.component.html
@@ -24,7 +24,7 @@
       </ul>
       -->
     </li>
-    <li [routerLinkActive]="['active']" [routerLinkActiveOptions]="{exact: true}">
+    <li [routerLinkActive]="['active']">
       <a routerLink="/projects">
         <i class="fa fa-folder-o"></i>
         <span class="sidebar-title">{{ 'SIDEBAR.PROJECTS' | translate }}</span>
