fix(Layout): small UI changes to dates and buttons

--- a/src/app/modules/testcases/testcases.component.css
+++ b/src/app/modules/testcases/testcases.component.css
@@ -64,6 +64,15 @@
     margin: 10px;
 }
 
+.button-row {
+    display: flex;
+    justify-content: flex-end;
+}
+
+.create-button {
+    align-self: flex-end;
+}
+
 
 /* DARK THEME */
 
