--- a/src/app/modules/users/user-details/user-details.component.html
+++ b/src/app/modules/users/user-details/user-details.component.html
@@ -19,8 +19,8 @@
         <td>{{ user.firstName }}</td>
         <td>{{ user.email }}</td>
         <!--<td>{{ user.projects }}</td>-->
-        <td>{{ user.created }}</td>
-        <td>{{ user.updated }}</td>
+        <td>{{ user.created | date: 'dd/MM/yyyy' }}</td>
+        <td>{{ user.updated | date: 'dd/MM/yyyy' }}</td>
         <td>{{ user.createdBy }}</td>
         <td>{{ user.updatedBy }}</td>
         <td><a *ngIf="user.email != 'admin';" (click)="deleteUser(user._id);">Delete</a>
