--- a/src/app/modules/users/users.component.html
+++ b/src/app/modules/users/users.component.html
@@ -1,14 +1,16 @@
 <div id="wrapper" [class.dark-theme]="themeService.theme">
 
   <div *ngIf="users">
-    <a routerLink="create" class="btn btn-primary">Create New User</a>
+    <div class="button-row">
+      <a routerLink="create" class="create-button btn btn-primary">Create New User</a>
+    </div>
 
     <table *ngIf="users.length > 0;" class="table">
       <thead>
         <tr>
           <th>User name</th>
           <th>email</th>
-          <th>Projects</th>
+          <!--<th>Projects</th>-->
           <th>Created</th>
           <th>Updated</th>
           <th>Created By</th>
@@ -19,9 +21,9 @@
       <tr *ngFor="let user of users">
         <td><a [routerLink]="['./', user._id]">{{ user.lastName }} {{ user.firstName }}</a></td>
         <td>{{ user.email }}</td>
-        <td>{{ user.projects }}</td>
-        <td>{{ user.created }}</td>
-        <td>{{ user.updated }}</td>
+        <!--<td>{{ user.projects }}</td>-->
+        <td>{{ user.created | date: 'dd/MM/yyyy' }}</td>
+        <td>{{ user.updated | date: 'dd/MM/yyyy' }}</td>
         <td>{{ user.createdBy }}</td>
         <td>{{ user.updatedBy }}</td>
         <td><a *ngIf="user.email != 'admin';" (click)="deleteUser(user._id);">Delete</a>
