--- a/src/app/modules/test-executions/test-executions.component.css
+++ b/src/app/modules/test-executions/test-executions.component.css
@@ -14,3 +14,121 @@
     background-color: #283242;
     color: #FFF;
 }
+
+.testexecutions-wrapper {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.execution-card {
+    margin: 25px;
+    width: 300px;
+    box-sizing: border-box;
+    /*box-shadow: 0 1px 0px #dfe2e7;*/
+    box-shadow: inset 0 0 0 1px rgba(0, 0, 0, 0.15), inset 0 -1px 0 0 rgba(0, 0, 0, 0.2);
+    /*#dfe2e7;*/
+    overflow: hidden;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+}
+
+.card-img-top {
+    width: 300px;
+}
+
+.card-block {
+    padding: 1.25rem;
+    flex-direction: column;
+}
+
+.card-block h1 {
+    text-align: center;
+}
+
+.edit-icon {
+    color: #fff;
+    position: absolute;
+    display: none;
+    font-size: 20px;
+    right: 15px;
+    top: 15px;
+}
+
+.project-card:hover>.edit-icon {
+    display: flex;
+}
+
+.project-card:hover>.edit-button {
+    visibility: visible;
+}
+
+.project-card:hover>.overlap {
+    opacity: 0.9;
+}
+
+.overlap {
+    opacity: 1;
+}
+
+.edit-button {
+    visibility: hidden;
+    margin: 10px;
+    background-color: #999;
+    border-color: #777;
+}
+
+#wrapper.dark-theme div.project-card {
+    background-color: #2d3035;
+}
+
+.project-card:hover>.edit-button,
+#wrapper.dark-theme .project-card:hover>.edit-button {
+    background-color: #0275d8;
+    border-color: #0275d8;
+}
+
+#wrapper.dark-theme .edit-button {
+    background-color: #303C4D;
+    border-color: #1B2531;
+}
+
+.create-card {
+    display: flex;
+    justify-content: center;
+    flex-direction: row;
+    border: 2px dashed #999;
+    box-shadow: 0 0 0;
+    background: inherit;
+}
+
+.create-card .card-block {
+    align-self: center;
+    justify-content: center;
+}
+
+.create-button {
+    margin: 10px;
+}
+
+.noexist-wrapper {
+    display: flex;
+    height: 600px;
+    align-items: center;
+    justify-content: center;
+}
+
+.no-execution {
+    width: auto;
+    align-self: center;
+    justify-content: center;
+    text-align: center;
+}
+
+.no-execution i {
+    margin-bottom: 20px;
+}
+
+.no-project h4 {
+    color: #616161;
+}
