--- a/src/app/modules/test-executions/test-executions.component.css
+++ b/src/app/modules/test-executions/test-executions.component.css
@@ -46,6 +46,30 @@
     text-align: center;
 }
 
+.card-title {}
+
+.card-description {
+    margin-top: 15px;
+    color: #999;
+}
+
+.progress-bar-container {
+    display: flex;
+    margin: 30px 0 10px 0;
+}
+
+.progress {
+    height: 7px;
+    width: 210px;
+}
+
+.progress-bar-status-value {
+    position: relative;
+    left: 15px;
+    bottom: 10px;
+    color: #999;
+}
+
 .edit-icon {
     color: #fff;
     position: absolute;
@@ -91,6 +115,28 @@
 #wrapper.dark-theme .edit-button {
     background-color: #303C4D;
     border-color: #1B2531;
+}
+
+.users {
+    position: relative;
+    width: 150px;
+}
+
+.status {
+    height: 18px;
+    /*
+    right: 15px;
+    bottom: 27px;*/
+    align-self: center;
+}
+
+.details {
+    flex: 1;
+}
+
+.card-bottom {
+    display: flex;
+    justify-content: space-between;
 }
 
 .create-card {
