--- a/src/app/modules/test-executions/test-executions.component.html
+++ b/src/app/modules/test-executions/test-executions.component.html
@@ -12,16 +12,19 @@
 
         <div class="card-block">
           <h5 class="card-title">{{ testExecution.name }}</h5>
-          <p class="card-text" style="margin-top: 15px; color: #999;">{{ testExecution.description }}</p>
+          <p class="card-description">{{ testExecution.description }}</p>
 
-          <div style="display:flex; margin: 30px 0 10px 0;">
-            <div class="progress" style="height: 7px; width: 210px;">
-              <div class="progress-bar bg-success" role="progressbar" style="height: 7px; width: 75%"></div>
+          <div class="details">
+            <div class="progress-bar-container">
+              <div class="progress">
+                <div class="progress-bar bg-success" role="progressbar" style="height: 7px;" [style.width]="testExecution.progress + '%'"></div>
+              </div>
+              <span class="progress-bar-status-value">{{ testExecution.progress }}%</span>
             </div>
-            <span style="position:relative; left: 20px; bottom: 10px; color: #999;">75%</span>
-          </div>
-          <div>
-            <img src="./assets/users.png" style="width: 150px;" />
+            <div class="card-bottom">
+              <img class="users" src="./assets/users.png" />
+              <span class="status badge" [ngClass]="{'badge-success': testExecution.status === 'Completed', 'badge-warning': testExecution.status === 'In Progress', 'badge-default': testExecution.status === 'Open'}">{{ testExecution.status }}</span>
+            </div>
           </div>
         </div>
 
