--- a/src/app/modules/test-executions/test-executions.component.css
+++ b/src/app/modules/test-executions/test-executions.component.css
@@ -33,29 +33,29 @@
     flex-direction: column;
 }
 
-.card-img-top {
-    width: 300px;
-}
-
 .card-block {
     padding: 1.25rem;
-    flex-direction: column;
+    display: flex;
+    flex-flow: column nowrap;
 }
 
 .card-block h1 {
     text-align: center;
 }
 
-.card-title {}
-
 .card-description {
     margin-top: 15px;
     color: #999;
 }
 
+.details {
+    margin-top: auto;
+}
+
 .progress-bar-container {
     display: flex;
     margin: 30px 0 10px 0;
+    justify-content: space-between;
 }
 
 .progress {
@@ -65,7 +65,6 @@
 
 .progress-bar-status-value {
     position: relative;
-    left: 15px;
     bottom: 10px;
     color: #999;
 }
@@ -128,10 +127,6 @@
     right: 15px;
     bottom: 27px;*/
     align-self: center;
-}
-
-.details {
-    flex: 1;
 }
 
 .card-bottom {
