--- a/src/app/modules/users/users.component.css
+++ b/src/app/modules/users/users.component.css
@@ -22,4 +22,22 @@
 
 .create-button {
     align-self: flex-end;
+    margin-bottom: 20px;
+}
+
+.delete-button {
+    position: absolute;
+    right: 0;
+}
+
+.align-end {
+    text-align: end;
+}
+
+.table td {
+    vertical-align: center !important;
+}
+
+.btn-secondary {
+    font-size: 13px;
 }
