fix(Layout): fix bootrap buttons due to bootstrap 4 beta changes

--- a/src/app/modules/projects/project-details/project-details.component.html
+++ b/src/app/modules/projects/project-details/project-details.component.html
@@ -27,27 +27,27 @@
         <tr>
           <td>Antonio Del Piero</td>
           <td>Tester</td>
-          <td class="align-end"><a class="btn btn-secondary">{{ 'PROJECT_DETAILSPAGE.REMOVE_MEMBER' | translate }}</a></td>
+          <td class="align-end"><a class="btn btn-outline-secondary">{{ 'PROJECT_DETAILSPAGE.REMOVE_MEMBER' | translate }}</a></td>
         </tr>
         <tr>
           <td>Valentino Galerro</td>
           <td>Senior Tester</td>
-          <td class="align-end"><a class="btn btn-secondary">{{ 'PROJECT_DETAILSPAGE.REMOVE_MEMBER' | translate }}</a></td>
+          <td class="align-end"><a class="btn btn-outline-secondary">{{ 'PROJECT_DETAILSPAGE.REMOVE_MEMBER' | translate }}</a></td>
         </tr>
         <tr>
           <td>Marco Garcia</td>
           <td>Senior Tester</td>
-          <td class="align-end"><a class="btn btn-secondary">{{ 'PROJECT_DETAILSPAGE.REMOVE_MEMBER' | translate }}</a></td>
+          <td class="align-end"><a class="btn btn-outline-secondary">{{ 'PROJECT_DETAILSPAGE.REMOVE_MEMBER' | translate }}</a></td>
         </tr>
         <tr>
           <td>Alesandro Bellagio</td>
           <td>Project Manager</td>
-          <td class="align-end"><a class="btn btn-secondary">{{ 'PROJECT_DETAILSPAGE.REMOVE_MEMBER' | translate }}</a></td>
+          <td class="align-end"><a class="btn btn-outline-secondary">{{ 'PROJECT_DETAILSPAGE.REMOVE_MEMBER' | translate }}</a></td>
         </tr>
         <tr>
           <td>Romario Tracia</td>
           <td>Lead Tester</td>
-          <td class="align-end"><a class="btn btn-secondary">{{ 'PROJECT_DETAILSPAGE.REMOVE_MEMBER' | translate }}</a></td>
+          <td class="align-end"><a class="btn btn-outline-secondary">{{ 'PROJECT_DETAILSPAGE.REMOVE_MEMBER' | translate }}</a></td>
         </tr>
       </tbody>
     </table>
