fix(Layout): scroll to top on route change Closes #59

--- a/src/app/modules/layout/layout.component.html
+++ b/src/app/modules/layout/layout.component.html
@@ -9,7 +9,7 @@
         <section id="content-wrapper">
 
             <div id="content">
-                <router-outlet></router-outlet>
+                <router-outlet (deactivate)="onDeactivate()"></router-outlet>
             </div>
 
         </section>
