feat(TestSuites): search and add button

--- a/src/app/modules/testcases/testsuites-tree/testsuites-tree.component.css
+++ b/src/app/modules/testcases/testsuites-tree/testsuites-tree.component.css
@@ -1,10 +1,14 @@
 #tree-component {
-    display: flex;
+    /* display: flex; */
     align-self: flex-end;
     border: 1px solid #CACACA;
     width: 300px;
     height: auto;
     min-height: 916px;
+}
+
+.create {
+    margin: 20px 0px;
 }
 
 
