--- a/src/app/modules/testcases/testsuites-tree/testsuites-tree.component.html
+++ b/src/app/modules/testcases/testsuites-tree/testsuites-tree.component.html
@@ -1,4 +1,10 @@
 <div id="tree-component">
+  <div class="search">
+    <input class="form-control" type="text" placeholder="Search..." />
+  </div>
+  <div class="create">
+    <a href="#"><i class="btn fa fa-plus"></i> Add Testsuite or Testcase</a>
+  </div>
   <!--
   <ul class="directory">
     <li class="folder">app
