--- a/src/app/modules/testcases/testcase-create/testcase-create.component.html
+++ b/src/app/modules/testcases/testcase-create/testcase-create.component.html
@@ -2,11 +2,11 @@
 
   <div class="create-form">
 
-    <form name="form" (ngSubmit)="f.form.valid && createNewTestcase()" #f="ngForm" validate>
+    <form name="form" (ngSubmit)="f.form.valid && createNewTestcase()" #f="ngForm">
 
       <div class="form-group row">
         <label for="testcase-name" class="col-2 col-form-label">{{ 'TESTCASECREATEPAGE.TITLE' | translate }}</label>
-        <div class="col-6">
+        <div class="col-8">
           <input class="form-control" type="text" name="title" placeholder="{{ 'TESTCASECREATEPAGE.TITLE_PLACEHOLDER' | translate }}"
             id="testcase-name" [(ngModel)]="testcase.title" #title="ngModel" required>
         </div>
@@ -14,7 +14,7 @@
 
       <div class="form-group row">
         <label for="description" class="col-2 col-form-label">{{ 'TESTCASECREATEPAGE.DESCRIPTION' | translate }}</label>
-        <div class="col-6">
+        <div class="col-8">
           <textarea class="form-control" type="text" name="description" placeholder="{{ 'TESTCASECREATEPAGE.DESCRIPTION' | translate }}"
             id="description" [(ngModel)]="testcase.description" #description="ngModel" required></textarea>
         </div>
@@ -22,7 +22,7 @@
 
       <div class="form-group row">
         <label for="preconditions" class="col-2 col-form-label">{{ 'TESTCASECREATEPAGE.PRECONDITIONS' | translate }}</label>
-        <div class="col-6">
+        <div class="col-8">
           <textarea class="form-control" type="text" name="preconditions" placeholder="{{ 'TESTCASECREATEPAGE.PRECONDITIONS' | translate }}"
             id="preconditions" [(ngModel)]="testcase.preConditions" #preconditions="ngModel" required></textarea>
         </div>
@@ -31,24 +31,41 @@
       <br>
       <div class="form-group row">
         <label for="steps" class="col-2 col-form-label">{{ 'TESTCASECREATEPAGE.STEPS' | translate }}</label>
-        <div class="col-6">
-          <hr>
-          <textarea class="form-control" type="text" name="steps" placeholder="{{ 'TESTCASECREATEPAGE.STEPS_ACTION_PLACEHOLDER' | translate }}"
-            [(ngModel)]="testcase.steps" required></textarea>
-          <br>
-          <textarea class="form-control" type="text" name="testData" placeholder="{{ 'TESTCASECREATEPAGE.TESTDATA_PLACEHOLDER' | translate }}"
-            [(ngModel)]="testcase.testData" required></textarea>
-          <br>
-          <textarea class="form-control" type="text" name="expected" placeholder="{{ 'TESTCASECREATEPAGE.EXPECTED_PLACEHOLDER' | translate }}"
-            [(ngModel)]="testcase.expected" required></textarea>
-          <hr>
+        <div class="col-8">
+          <table class="table">
+            <thead>
+              <tr>
+                <th>#</th>
+                <th>{{ 'TESTCASECREATEPAGE.STEPS_ACTION_PLACEHOLDER' | translate }}</th>
+                <th>{{ 'TESTCASECREATEPAGE.TESTDATA_PLACEHOLDER' | translate }}</th>
+                <th>{{ 'TESTCASECREATEPAGE.EXPECTED_PLACEHOLDER' | translate }}</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>1</td>
+                <td>
+                  <textarea class="form-control" name="steps" placeholder="{{ 'TESTCASECREATEPAGE.STEPS_ACTION_PLACEHOLDER' | translate }}"
+                    [(ngModel)]="testcase.steps" required></textarea>
+                </td>
+                <td><textarea class="form-control" name="testData" placeholder="{{ 'TESTCASECREATEPAGE.TESTDATA_PLACEHOLDER' | translate }}"
+                    [(ngModel)]="testcase.testData" required></textarea>
+                </td>
+                <td>
+                  <textarea class="form-control" type="text" name="expected" placeholder="{{ 'TESTCASECREATEPAGE.EXPECTED_PLACEHOLDER' | translate }}"
+                    [(ngModel)]="testcase.expected" required></textarea>
+                </td>
+              </tr>
+            </tbody>
+          </table>
+
         </div>
 
       </div>
 
       <div class="form-group row">
         <label for="postconditions" class="col-2 col-form-label">{{ 'TESTCASECREATEPAGE.POSTCONDITIONS' | translate }}</label>
-        <div class="col-6">
+        <div class="col-8">
           <textarea class="form-control" type="text" name="postconditions" placeholder="{{ 'TESTCASECREATEPAGE.POSTCONDITIONS' | translate }}"
             id="postconditions" [(ngModel)]="testcase.postConditions" #postconditions="ngModel" required></textarea>
         </div>
